--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ certifi==2019.11.28
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+dj-database-url==0.5.0
 Django==3.0.4
+django-cors-headers==3.2.1
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 drf-yasg==1.17.1
@@ -24,3 +26,4 @@ six==1.14.0
 sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.8
+whitenoise==5.0.1
